--- a/space_rental/src/main/webapp/resources/css/main.css
+++ b/space_rental/src/main/webapp/resources/css/main.css
@@ -173,7 +173,8 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 110px 130px 157px 148px;
+  padding: 110px 130px 150px;
+  margin-top: 130px;
 }
 
 /*------------------------------------------------------------------
